created start of analysis procedure

--- a/Ray_WorkSpace/Template/Financial_Calc_Template.ipynb
+++ b/Ray_WorkSpace/Template/Financial_Calc_Template.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "14a70fb7",
+   "id": "99c88ea7",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ccfada1",
+   "id": "0ab1ad72",
    "metadata": {},
    "source": [
     "# Required Libraries and Dependencies:\n",
@@ -49,27 +49,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a4f6968",
+   "id": "7bd48a30",
    "metadata": {},
    "source": [
     "# Code Snippets for Financial Analysis:\n",
     "\n",
     "## REQUIRED VARIABLE INFO: \n",
     "\n",
-    "Trading days will always be equal to 365 for crypto currency since the markets do not close\n",
+    "/ Trading days will always be equal to 365 for crypto currency since the markets do not close\n",
     "\n",
-    "Market proxy Need to determine, can do basket by top ten market cap or bitcoin itself (simplest option is to just do bitcoin)\n",
+    "/ Market proxy: just do bitcoin, it's a major percentage of market share)\n",
     "\n",
-    "Risk free rate (for sharpe ration) is essentially 0\n",
+    "/ Risk free rate (for sharpe ration) is essentially 0\n",
     "\n",
     "\n",
     "## RETURNS:\n",
     "\n",
-    "Daily returns as decimal: daily_returns =  df.pct_change() \n",
+    "/ Daily returns as decimal: daily_returns =  df.pct_change() \n",
     "\n",
-    "Cumulative returns as decimal: cumulative_returns = (1 + daily_returns).cumprod() - 1\n",
+    "/ Cumulative returns as decimal: cumulative_returns = (1 + daily_returns).cumprod() - 1\n",
     "\n",
-    "Annual Average Returns: ann_avg_returns = daily_returns.mean() * trading_days\n",
+    "/ Annual Average Returns: ann_avg_returns = daily_returns.mean() * trading_days\n",
     "\n",
     "\n",
     "## VOLATILITY / RISK METRICS:\n",
@@ -82,7 +82,7 @@
     "\n",
     "/ Standard Deviation: daily_returns.std() \n",
     "\n",
-    "/ Annualized standard deviation;\n",
+    "Annualized standard deviation;\n",
     "\n",
     "/ Beta: daily_returns_of_asset.cov(daily_returns_of_market) / daily_returns_market.var()\n",
     "\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42ca5492",
+   "id": "e800da86",
    "metadata": {},
    "outputs": [],
    "source": []
