finally found heatmap code snippets and added to template

--- a/Ray_WorkSpace/Template/Revised_Analysis_Template.ipynb
+++ b/Ray_WorkSpace/Template/Revised_Analysis_Template.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9fa67536",
+   "id": "914e19ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,15 +19,24 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2d9148b2",
+   "id": "752cb9c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# STEP 1: IMPORT DEPENDENCIES\n",
     "\"\"\"\n",
+    "For calculations:\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "import numpy as np\n",
+    "\n",
+    "\n",
+    "For Heatmap:\n",
+    "\n",
+    "import seaborn as sns\n",
+    "\n",
+    "%matplotlib inline\n",
     "\n",
     "\"\"\""
    ]
@@ -35,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ebbfa872",
+   "id": "f0585b4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e58f6046",
+   "id": "253f8498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c74fbf70",
+   "id": "06a2d3f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3b4e49b3",
+   "id": "c669d9d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,10 +100,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c87fcb0a",
+   "execution_count": 1,
+   "id": "916a8c62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nbeta = covariance of asset to market / variance of market\\n\\nuse previous calculations for market variance and covariance of assets\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# STEP 6: CALCULATE BETA OF EACH CURRENCY\n",
     "\n",
@@ -104,6 +124,48 @@
     "use previous calculations for market variance and covariance of assets\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "877c207f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nNEW CELL to check daily returns are displayed with pct_change already applied\\n- Take dataframe of daily returns from step 3 (pct_change drop na already applied)\\n\\nNEW CELL to check correlation dataframe\\n- correlation = daily_returns_dataframe.corr()\\n\\nNEW CELL to display heatmap\\n- sns.heatmap(correlation)\\n\\n\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display Correlation Heatmap With Seaborn\n",
+    "\n",
+    "\"\"\"\n",
+    "NEW CELL to check daily returns are displayed with pct_change already applied\n",
+    "- Take dataframe of daily returns from step 3 (pct_change drop na already applied)\n",
+    "\n",
+    "NEW CELL to check correlation dataframe\n",
+    "- correlation = daily_returns_dataframe.corr()\n",
+    "\n",
+    "NEW CELL to display heatmap\n",
+    "- sns.heatmap(correlation)\n",
+    "\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b7f9f48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
