found last formula

--- a/Ray_WorkSpace/Template/Financial_Calc_Template.ipynb
+++ b/Ray_WorkSpace/Template/Financial_Calc_Template.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "99c88ea7",
+   "id": "c2f62eee",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ab1ad72",
+   "id": "c0a6533d",
    "metadata": {},
    "source": [
     "# Required Libraries and Dependencies:\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd48a30",
+   "id": "1d512f38",
    "metadata": {},
    "source": [
     "# Code Snippets for Financial Analysis:\n",
@@ -82,7 +82,8 @@
     "\n",
     "/ Standard Deviation: daily_returns.std() \n",
     "\n",
-    "Annualized standard deviation;\n",
+    "/ Annualized standard deviation: \n",
+    "ann_std_dev_all = std_dev_all * (np.sqrt(trading_days))\n",
     "\n",
     "/ Beta: daily_returns_of_asset.cov(daily_returns_of_market) / daily_returns_market.var()\n",
     "\n",
@@ -105,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e800da86",
+   "id": "818f6668",
    "metadata": {},
    "outputs": [],
    "source": []
