--- a/MB_folder/CG_walkthrough_and_data.ipynb
+++ b/MB_folder/CG_walkthrough_and_data.ipynb
@@ -14547,7 +14547,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dev)",
+   "display_name": "dev",
    "language": "python",
    "name": "dev"
   },
