--- a/MB_folder/CG_walkthrough_and_data.ipynb
+++ b/MB_folder/CG_walkthrough_and_data.ipynb
@@ -14542,7 +14542,15 @@
    "id": "b7208da7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get top 100 crypto currencies from early 2017. Data format is month-day-year. \n",
+    "time_start = datetime\n",
+    "top_100=cg.get_exchanges_by_id('kraken', date='10-2-2017', localization=False)\n",
+    "kraken_top_100_2017 = pd.DataFrame(top_100['tickers'], columns=['base', 'target', 'volume'])\n",
+    "kraken_top_100_2017\n",
+    "# Format to display top 10.\n",
+    "kraken_top_100_2017.head(20)"
+   ]
   }
  ],
  "metadata": {
