--- a/MB_folder/COIN_API.ipynb
+++ b/MB_folder/COIN_API.ipynb
@@ -30553,7 +30553,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dev)",
+   "display_name": "dev",
    "language": "python",
    "name": "dev"
   },
