--- a/MB_folder/Coin_market_cap.ipynb
+++ b/MB_folder/Coin_market_cap.ipynb
@@ -311,7 +311,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dev)",
+   "display_name": "dev",
    "language": "python",
    "name": "dev"
   },
