--- a/MB_folder/Analysis_2018.ipynb
+++ b/MB_folder/Analysis_2018.ipynb
@@ -1569,9 +1569,7 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "f97a623e",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2036,7 +2034,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dev)",
+   "display_name": "dev",
    "language": "python",
    "name": "dev"
   },
