Analysis pt.2 Cumulative Returns and volatility

--- a/Ray_WorkSpace/RH_Analysis/RH_Analysis_Round_1.ipynb
+++ b/Ray_WorkSpace/RH_Analysis/RH_Analysis_Round_1.ipynb
@@ -1125,7 +1125,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dev)",
+   "display_name": "dev",
    "language": "python",
    "name": "dev"
   },
