--- a/MB_folder/Analysis_2018.ipynb
+++ b/MB_folder/Analysis_2018.ipynb
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "id": "31895dd0",
    "metadata": {},
    "outputs": [
@@ -1407,7 +1407,7 @@
        "1.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,20 +1420,20 @@
     "\n",
     "use previous calculations for market variance and covariance of assets\n",
     "\"\"\"\n",
-    "btc_beta_2018 = mkt_2018_cov / btc_var_2018\n",
+    "btc_beta_2018 = mkt_2018_cov / market_var\n",
     "btc_beta_2018\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "91ec2938",
+   "id": "2186eaa5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7702975575797709"
+       "1.310062411008627"
       ]
      },
      "execution_count": 36,
@@ -1442,8 +1442,8 @@
     }
    ],
    "source": [
-    "ada_beta_2018 = ada_2018_cov / btc_var_2018\n",
-    "ada_beta_2018"
+    "eth_beta_2018 = eth_2018_cov / btc_var_2018\n",
+    "eth_beta_2018"
    ]
   },
   {
