--- a/MB_folder/Analysis_2017.ipynb
+++ b/MB_folder/Analysis_2017.ipynb
@@ -5,7 +5,18 @@
    "execution_count": 1,
    "id": "5f659733",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nFor now, we keep it simple. If we need to expand, we can. \\nWe are taking what we need to in order to understand how each basket of currencies \\nis correlated to the market proxy (bitcoin)\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# GOAL: HAVE EACH ANALYSIS SECTION COMPUTE A STANDARD SET OF CALCULATIONS FOR RISK METRICS AND CORRELATION\n",
     "\n",
@@ -1146,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "b4057f7a",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1167,7 @@
        "0.04700978261196384"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "83018470",
    "metadata": {},
    "outputs": [
@@ -1178,7 +1189,7 @@
        "0.00796408058205679"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "4e015557",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1211,7 @@
        "0.5213475900801245"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "e0abcb0d",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1233,7 @@
        "0.07378355263230235"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "40e1fbff",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1255,7 @@
        "0.0667143414743076"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "f6d4bba3",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1277,7 @@
        "0.1079407087523862"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "f167e943",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1299,7 @@
        "1.0000000000000004"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "1b324e6e",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1328,7 @@
        "0.6868465882125281"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "ec2ed6f1",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1350,7 @@
        "0.6103531369814357"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "83899032",
    "metadata": {},
    "outputs": [
@@ -1361,7 +1372,7 @@
        "0.10340191543864354"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "id": "895e1c71",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1394,7 @@
        "6.768934451148327"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "id": "4b23926f",
    "metadata": {},
    "outputs": [
@@ -1405,7 +1416,7 @@
        "0.9579713052172165"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "0c1a61cd",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1438,7 @@
        "0.8661879578683993"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "id": "ede4e726",
    "metadata": {},
    "outputs": [
@@ -1449,7 +1460,7 @@
        "1.401451922014455"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "id": "162ec0e8",
    "metadata": {},
    "outputs": [
@@ -1471,7 +1482,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
