--- a/MB_folder/Analysis_2016.ipynb
+++ b/MB_folder/Analysis_2016.ipynb
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4abacb2b",
    "metadata": {},
    "outputs": [],
@@ -1537,13 +1537,13 @@
     "\"\"\"\n",
     "#reading in csv data\n",
     "df_2016 = pd.read_csv(\n",
-    "    Path('2016_data.csv')\n",
+    "    Path('./Data_Folder/2016_data.csv')\n",
     ").set_index('Month')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "65fdc053",
    "metadata": {},
    "outputs": [
@@ -1930,7 +1930,7 @@
        "December       5157.258046  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3473,7 +3473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "39cb2d16",
    "metadata": {},
    "outputs": [
@@ -3583,7 +3583,7 @@
        "11   December        2246.63"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3592,7 +3592,7 @@
     "# reading in s&p data\n",
     "#reading in csv data\n",
     "market_2016 = pd.read_csv(\n",
-    "    Path('S&P_2016_Closing_Monthly.csv'),\n",
+    "    Path('./Data_Folder/S&P_2016_Closing_Monthly.csv'),\n",
     ")\n",
     "\n",
     "# display dataframe\n",
