--- a/MB_folder/Analysis_2017.ipynb
+++ b/MB_folder/Analysis_2017.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a6807ecc",
    "metadata": {},
    "outputs": [
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4abacb2b",
    "metadata": {},
    "outputs": [],
@@ -1537,7 +1537,7 @@
     "\"\"\"\n",
     "#reading in csv data\n",
     "df_2017 = pd.read_csv(\n",
-    "    Path('2017_data.csv')\n",
+    "    Path('./Data_Folder/2017_data.csv')\n",
     ").set_index('Month')"
    ]
   },
@@ -4172,7 +4172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "6007dbfd",
    "metadata": {},
    "outputs": [
@@ -4282,7 +4282,7 @@
        "11   December        2664.34"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4291,7 +4291,7 @@
     "# reading in s&p data\n",
     "#reading in csv data\n",
     "market_2017 = pd.read_csv(\n",
-    "    Path('S&P_2017_Closing_Monthly.csv'),\n",
+    "    Path('./Data_Folder/S&P_2017_Closing_Monthly.csv'),\n",
     ")\n",
     "\n",
     "# display dataframe\n",
