--- a/MB_folder/Analysis_2018.ipynb
+++ b/MB_folder/Analysis_2018.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4e01ad41",
    "metadata": {},
    "outputs": [
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4cb76893",
    "metadata": {},
    "outputs": [],
@@ -1537,7 +1537,7 @@
     "\"\"\"\n",
     "#reading in csv data\n",
     "df_2018 = pd.read_csv(\n",
-    "    Path('2018_data.csv')\n",
+    "    Path('./Data_Folder/2018_data.csv')\n",
     ").set_index('Month')"
    ]
   },
@@ -4347,7 +4347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "2bdd303f",
    "metadata": {},
    "outputs": [
@@ -4457,7 +4457,7 @@
        "11   December        2567.31"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4466,7 +4466,7 @@
     "# reading in s&p data\n",
     "#reading in csv data\n",
     "market_2018 = pd.read_csv(\n",
-    "    Path('S&P_2018_Closing_Monthly.csv'),\n",
+    "    Path('./Data_Folder/S&P_2018_Closing_Monthly.csv'),\n",
     ")\n",
     "\n",
     "# display dataframe\n",
