--- a/MB_folder/Analysis_2019.ipynb
+++ b/MB_folder/Analysis_2019.ipynb
@@ -1537,7 +1537,7 @@
     "\"\"\"\n",
     "#reading in csv data\n",
     "df_2019 = pd.read_csv(\n",
-    "    Path('2019_data.csv')\n",
+    "    Path('./Data_Folder/2019_data.csv')\n",
     ").set_index('Month')"
    ]
   },
@@ -4729,7 +4729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "id": "11645c04",
    "metadata": {},
    "outputs": [
@@ -4839,7 +4839,7 @@
        "11   December        3176.75"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4848,7 +4848,7 @@
     "# reading in s&p data\n",
     "#reading in csv data\n",
     "market_2019 = pd.read_csv(\n",
-    "    Path('S&P_2019_Closing_Monthly.csv'),\n",
+    "    Path('./Data_Folder/S&P_2019_Closing_Monthly.csv'),\n",
     ")\n",
     "\n",
     "# display dataframe\n",
