--- a/MB_folder/Analysis_2020.ipynb
+++ b/MB_folder/Analysis_2020.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a6807ecc",
    "metadata": {},
    "outputs": [
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4abacb2b",
    "metadata": {},
    "outputs": [],
@@ -1537,7 +1537,7 @@
     "\"\"\"\n",
     "#reading in csv data\n",
     "df_2020 = pd.read_csv(\n",
-    "    Path('2020_data.csv')\n",
+    "   Path('./Data_Folder/2020_data.csv')\n",
     ").set_index('Month')"
    ]
   },
@@ -4813,7 +4813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "id": "eb7349f9",
    "metadata": {},
    "outputs": [
@@ -4923,7 +4923,7 @@
        "11   December         3758.3"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4932,7 +4932,7 @@
     "# reading in s&p data\n",
     "#reading in csv data\n",
     "market_2020 = pd.read_csv(\n",
-    "    Path('S&P_2020_Closing_Monthly.csv'),\n",
+    "    Path('./Data_Folder/S&P_2020_Closing_Monthly.csv'),\n",
     ")\n",
     "\n",
     "# display dataframe\n",
