--- a/MB_folder/Analysis_2021.ipynb
+++ b/MB_folder/Analysis_2021.ipynb
@@ -1537,7 +1537,7 @@
     "\"\"\"\n",
     "#reading in csv data\n",
     "df_2021 = pd.read_csv(\n",
-    "    Path('2021_data.csv')\n",
+    "   Path('./Data_Folder/2021_data.csv')\n",
     ").set_index('Month')"
    ]
   },
@@ -4639,7 +4639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "76d8be34",
    "metadata": {},
    "outputs": [
@@ -4725,7 +4725,7 @@
        "7    August        4479.71"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4734,7 +4734,7 @@
     "# reading in s&p data\n",
     "#reading in csv data\n",
     "market_2021 = pd.read_csv(\n",
-    "    Path('S&P_2021_Closing_Monthly.csv'),\n",
+    "   Path('./Data_Folder/S&P_2021_Closing_Monthly.csv'),\n",
     ")\n",
     "\n",
     "# display dataframe\n",
