still dealing with commit issue this is a test

--- a/Nate_space/2018-2021.ipynb
+++ b/Nate_space/2018-2021.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8067f410",
+   "id": "ad4675dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "89fbcb45",
+   "id": "f6859fda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "dc2284c6",
+   "id": "ed6ba4a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "993ff84d",
+   "id": "8e2b22e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2a8899eb",
+   "id": "1d6fdc32",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "5e9f93cf",
+   "id": "35c2d948",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d231f35b-d33b-496d-b91f-42dba11552ad",
+   "id": "56be7cd4",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "798b76e0-d50f-435b-8fae-94159fb85177",
+   "id": "32b11a61",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "f49dcd44-7744-41b5-a2b3-a2169366f21a",
+   "id": "4bd468e4",
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee227910-09ef-4ff1-bdf9-b0303f2c01b2",
+   "id": "7bb36cc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "1eb9b5d5-1975-441d-a25a-23d24456df9d",
+   "id": "1a5b759b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bbbf882-d1fe-4b7e-a899-39ad6b3e87ee",
+   "id": "46f463e2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -582,7 +582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "Python (dev)",
    "language": "python",
    "name": "dev"
   },
