--- a/Nate_space/s&p_cryptos_Analysis_2017-2021.ipynb
+++ b/Nate_space/s&p_cryptos_Analysis_2017-2021.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4cc7a7d5-6abd-4b0c-809e-c41773bc175b",
+   "id": "bb5f52e5",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dcab8b9d-aafc-4d23-a538-afe48fdb9640",
+   "id": "e92df748",
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1f454380-192b-4b49-90ec-93a60c9fd0b2",
+   "id": "1f550d43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2308d5b8-e8fe-4b2f-bfdb-d38267f18ad2",
+   "id": "932c7eff",
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b4d02e06-c16d-4522-b7db-503c74ded559",
+   "id": "56df70ac",
    "metadata": {},
    "outputs": [
     {
@@ -2303,7 +2303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6bc37528-a1c0-4a53-b0e3-9289280620d6",
+   "id": "42c5b2ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2374,7 +2374,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "0972faa9-f39a-45d6-8262-e0b888f1fe70",
+   "id": "aa43f3cd",
    "metadata": {},
    "outputs": [
     {
@@ -2396,7 +2396,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d83d7223-c609-40dd-bfa0-9eb272c4111f",
+   "id": "7a380649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2406,7 +2406,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f0a09644-c900-495f-b451-bc2d082ec5e0",
+   "id": "86bdf514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2424,7 +2424,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "451facba-6efb-4aaa-ba8b-dccd05a0e6ea",
+   "id": "9a27df10",
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "cd8ed07c-e72d-4f74-9d9c-470da2eb24c3",
+   "id": "838e2247",
    "metadata": {},
    "outputs": [
     {
@@ -2667,7 +2667,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "03ce2753-8568-4063-a413-f3102e7a3515",
+   "id": "3e005832",
    "metadata": {},
    "outputs": [
     {
@@ -2742,7 +2742,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "f713c609-7c6a-4eb1-8ffc-fe4c1cfb186f",
+   "id": "d7501d56",
    "metadata": {},
    "outputs": [
     {
@@ -2867,7 +2867,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "790f7fe1-3284-4824-82d5-000407d60d1e",
+   "id": "1be914f8",
    "metadata": {},
    "outputs": [
     {
@@ -2939,7 +2939,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "f9b91461-0904-4f59-9564-ff31e233f6cf",
+   "id": "4821c454",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2952,7 +2952,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "4c165305-1df2-4ca5-81a6-2d6ee98d28ab",
+   "id": "cadd5fce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2965,7 +2965,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "e5905747-4c8e-41be-9528-513901c50ab2",
+   "id": "c1ce93d1",
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2994,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "8c83e2e8-b1c0-485b-9263-034b96980ec1",
+   "id": "06efc8f1",
    "metadata": {},
    "outputs": [
     {
@@ -3023,7 +3023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e78698b-8329-4c12-8e4c-17f6c19606e5",
+   "id": "93d9d009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3035,7 +3035,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "31649d00-8792-48f9-a645-fe5748e2e2a1",
+   "id": "262ae4c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3046,7 +3046,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "91dfe0d1-4f8c-48e4-91ee-90b0783aeb19",
+   "id": "8be3fdcc",
    "metadata": {},
    "outputs": [
     {
@@ -3116,7 +3116,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cd3a088e-09eb-40cd-a684-6b3c70a58fac",
+   "id": "a5a2d27f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3142,7 +3142,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "6acf96ef-1e6b-4e50-a177-ad5c5fff37b6",
+   "id": "733ea307",
    "metadata": {},
    "outputs": [
     {
@@ -3207,7 +3207,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "156dc5c8-b537-4be7-b897-6e68b49b0b20",
+   "id": "8cec7cca",
    "metadata": {},
    "outputs": [
     {
@@ -3272,7 +3272,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "47d01771-878e-48e6-a726-cc9c394db12f",
+   "id": "cf98d409",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3282,7 +3282,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "32dcd767-0a4f-4ee0-8803-29d3ea756ef0",
+   "id": "f2b3ba12",
    "metadata": {},
    "outputs": [
     {
@@ -3347,7 +3347,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "eaac01a7-2993-4c81-8e4f-86fd719f377f",
+   "id": "0c7f97fe",
    "metadata": {},
    "outputs": [
     {
@@ -3419,7 +3419,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "703f1afa-9e41-405e-8b18-824692d33ad7",
+   "id": "554108dc",
    "metadata": {},
    "outputs": [
     {
@@ -3487,7 +3487,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "75a8ccf0-5340-4ee5-871f-3e660b381b22",
+   "id": "4ffb92cb",
    "metadata": {},
    "outputs": [
     {
@@ -3509,7 +3509,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4390b3b3-9d80-4007-a3c6-3df1517a1809",
+   "id": "561bcbab",
    "metadata": {},
    "outputs": [
     {
@@ -3537,7 +3537,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8f9bffd3-9518-4fb6-9f53-c564cdc682f7",
+   "id": "ab19ef84",
    "metadata": {},
    "outputs": [
     {
@@ -3561,7 +3561,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3c0d9cc7-5ab8-4095-99e5-376f3ddeed1c",
+   "id": "c4b82328",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3578,7 +3578,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "5838f6cf-fec5-47d6-8613-1ceb60acf0be",
+   "id": "68ef24ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3602,7 +3602,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "92b2c027-29fc-482f-97b1-852d3c9843dd",
+   "id": "0498001f",
    "metadata": {},
    "outputs": [
     {
@@ -3668,7 +3668,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d8c8e3f5-3dc2-44e4-9c84-c74d60751348",
+   "id": "b0f3bbc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3678,7 +3678,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "Python (dev)",
    "language": "python",
    "name": "dev"
   },
